feat: add v1.2 user profile foundation
